# AST-Comparison-Tool

./: .gitignore  CMakeLists.txt  README.md
CPGTrimmer/: build.sbt
CPGTrimmer/.bsp/: sbt.json
CPGTrimmer/project/: plugins.sbt
CPGTrimmer/src/main/scala/: CPGTrimmer.scala
CPGTrimmer/src/main/scala/io/: .CPGTrimmer.scala.swp  CPGTrimmer.scala
CPGTrimmer/src/test/scala/: CPGTrimmerTests.scala
CPGTrimmer/src/test/scala/io/: CPGTrimmerTests.scala
CPPTypeRecoveryPlugin/: build.sbt  install.sh  installtest.sh  joern-install.sh
CPPTypeRecoveryPlugin/src/main/scala/: NumericType.scala
CPPTypeRecoveryPlugin/src/main/scala/io/RemoveEmpty/: RemoveEmptyNodes.scala
CPPTypeRecoveryPlugin/src/main/scala/io/TypeRecover/: CPPTypeRecoveryPass.scala
CPPTypeRecoveryPlugin/src/main/scala/io/joern/c2cpgTypeRecovery/: CPPTypeRecoveryExt.scala  CPPTypeRecoveryPass.scala
ClangParser/: ast_extractor.hpp
JsonToDot/: JsonToDot.py
clang-ast-traversal/: CMakeLists.txt
clang-ast-traversal/data/joern_cpg/ast/: 2-ast.dot
clang-ast-traversal/data/joern_cpg/cpg/: 1-cpg.dot
cpg-trimmer/: README.md  build.sbt
cpg-trimmer/.bsp/: sbt.json
cpg-trimmer/src/main/scala/io/joern/CPGTrimmer/: CPGTrimLogger.scala  CPGTrimmer.scala
data/clang_ast/: .cwe121.json.swp
data/joern_cpg/ast/: 0-ast.dot  1-ast.dot  3-ast.dot  zero
data/joern_cpg/cpg/: 0-cpg.dot  2-cpg.dot  3-cpg.dot
src/: .ClangASTExtractor.cpp.swp  ClangASTExtractor.cpp  JsonGraphReader.py  JsonToDot.py  ast_extractor.hpp  graphout.dot
